[package]
name = "qtfblight"
version = "0.1.1"
edition = "2024"
description = "QTFB compatibility server for reMarkable tablets"
license = "GPL-3.0-only"
repository = "https://github.com/NoaHimesaka1873/qtfblight"
keywords = ["remarkable", "eink", "qtfb", "oxide"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
